--- a/src/views/main.css
+++ b/src/views/main.css
@@ -1,3 +1,8 @@
-.big {
-	font-size: 50;
+.button-main {
+}
+
+.answer {
+    font-size: 50;
+    font-weight: bold;
+    horizontal-align: center;
 }
