Made answer stretchy

--- a/src/views/main.css
+++ b/src/views/main.css
@@ -4,5 +4,6 @@
 .answer {
     font-size: 50;
     font-weight: bold;
-    horizontal-align: center;
+    horizontal-align: stretch;
+    text-align: center;
 }
